--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <title>Techy Ahad</title>
   </head>
   <body>
+    <h1>Welcome</h1>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
   </body>
 </html>
