Added Meta Tags

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Techy Ahad</title>
+
+    <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
 
     <!-- Preconnect to external resources -->
@@ -14,9 +18,40 @@
       rel="stylesheet"
     />
 
-    <!-- Viewport settings -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Techy Ahad</title>
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Techy Ahad - Front-End Developer, UI/UX Designer, and Tech Enthusiast. Exploring modern tech stacks with a passion for technology and creativity."
+    />
+    <meta
+      name="keywords"
+      content="Front-End Developer, UI/UX Designer, Technology, React, JavaScript, TypeScript, Tailwind CSS, Tech Enthusiast"
+    />
+    <meta name="author" content="Ahad" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Techy Ahad" />
+    <meta
+      property="og:description"
+      content="Techy Ahad - Front-End Developer, UI/UX Designer, and Tech Enthusiast. Exploring modern tech stacks with a passion for technology and creativity."
+    />
+    <meta property="og:image" content="../techy-ahad/src/assets/images/aha.jpg" />
+    <meta property="og:url" content="https://yourwebsite.com" />
+    <meta property="og:type" content="profile" />
+    <meta property="og:site_name" content="Techy Ahad" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Techy Ahad" />
+    <meta
+      name="twitter:description"
+      content="Techy Ahad - Front-End Developer, UI/UX Designer, and Tech Enthusiast. Exploring modern tech stacks with a passion for technology and creativity."
+    />
+    <meta
+      name="twitter:image"
+      content="/path/to/your/profile-pic-or-logo.jpg"
+    />
+    <meta name="twitter:site" content="@yourTwitterHandle" />
 
     <!-- Include any critical CSS here if needed -->
     <!-- <link rel="stylesheet" href="/path/to/critical.css" /> -->
